--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title>честно</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
-    <script>
-  const tonConnectUI = new TonConnectUI({
-    manifestUrl: "https://chestno.online/tonconnect-manifest.json",
-    buttonRootId: "ton-connect-button"
+<script>
+  window.addEventListener("DOMContentLoaded", () => {
+    const tonConnectUI = new TonConnectUI({
+      manifestUrl: "https://chestno.online/tonconnect-manifest.json",
+      buttonRootId: "ton-connect-button"
+    });
+    window.tonConnectUI = tonConnectUI;
   });
-  window.tonConnectUI = tonConnectUI;
 </script>
-    </script>
       <style>
       :root {
         --bg-color: var(--tg-theme-bg-color, #fdfcf9);
