--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         hideAll();
         const user = Telegram.WebApp.initDataUnsafe?.user;
         if (user) {
-          document.getElementById('tg-name').textContent = `${user.first_name || ''} ${user.last_name || ''}`.trim();
+          document.getElementById('tg-name').textContent = ${user.first_name || ''} ${user.last_name || ''}.trim();
           document.getElementById('tg-username').textContent = `@${user.username || 'нет'}`;
            document.getElementById('tg-id').textContent = `ID: ${user.id}`;
           if (user.photo_url) {
