--- a/index.html
+++ b/index.html
@@ -115,25 +115,41 @@
       <button class="button">Мои сделки</button>
       <button class="button" onclick="showHomeScreen()">Назад</button>
     </div>
-    <div id="guide-screen" class="hidden" style="max-width: 600px; width: 100%; padding: 20px; text-align: left;">
-      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;">
-        Это платформа для прямых договорённостей с гарантией выполнения и ИИ-арбитражем.
-      </p>
-      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>1. Инициатор создаёт сделку</strong><br/>
-        Указывает @username второго участника, краткое описание и сумму.</p>
-      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>2. Согласование условий</strong><br/>
-        Можно загрузить переписку, оферту, примеры работ. AI помогает составить договор на основе этих данных.</p>
-      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>3. Заморозка средств</strong><br/>
-        После согласования условий деньги временно блокируются. Исполнитель начинает работу.</p>
-      <p style="font-size: 16px; margin-bottom: 16px; line-height: 1.6;"><strong>4. Завершение</strong><br/>
-        После выполнения работы стороны подтверждают завершение и происходит оплата.</p>
-      <p style="font-size: 16px; margin-top: 24px; line-height: 1.6;">
-        «Честно» — для фрилансеров, самозанятых, бизнеса и всех, кто хочет работать честно и безопасно.
-      </p>
-      <div style="display: flex; justify-content: center; margin-top: 32px;">
-        <button class="button" onclick="showHomeScreen()">Назад</button>
-      </div>
-    </div>
+   <div id="guide-screen" class="hidden" style="max-width: 600px; width: 100%; padding: 20px;">
+  <h2 style="text-align: center; margin-bottom: 24px;">Как работает «Честно»</h2>
+
+  <p style="font-size: 16px; margin-bottom: 24px; line-height: 1.6; text-align: center;">
+    Это платформа для прямых договорённостей с гарантией выполнения и ИИ-арбитражем.
+  </p>
+
+  <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
+    <strong>1. Инициатор создаёт сделку</strong><br/>
+    Указывает @username второго участника, краткое описание и сумму.
+  </div>
+
+  <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
+    <strong>2. Согласование условий</strong><br/>
+    Можно загрузить переписку, оферту, примеры работ. AI помогает составить договор на основе этих данных.
+  </div>
+
+  <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
+    <strong>3. Заморозка средств</strong><br/>
+    После согласования условий деньги временно блокируются. Исполнитель начинает работу.
+  </div>
+
+  <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
+    <strong>4. Завершение</strong><br/>
+    После выполнения работы стороны подтверждают завершение и происходит оплата.
+  </div>
+
+  <p style="font-size: 15px; color: #555; margin-top: 32px; text-align: center;">
+    «Честно» — для фрилансеров, самозанятых, бизнеса и всех, кто хочет работать честно и безопасно.
+  </p>
+
+  <div style="display: flex; justify-content: center; margin-top: 24px;">
+    <button class="button" onclick="showHomeScreen()">Назад</button>
+  </div>
+</div>
     <div class="footer">chestno.online · сервис безопасной сделки</div>
     <script>
       Telegram.WebApp.ready();
