--- a/index.html
+++ b/index.html
@@ -116,32 +116,25 @@
       <button class="button" onclick="showHomeScreen()">Назад</button>
     </div>
    <div id="guide-screen" class="hidden" style="max-width: 600px; width: 100%; padding: 20px;">
-  <h2 style="text-align: center; margin-bottom: 24px;">Как работает «Честно»</h2>
-
   <p style="font-size: 16px; margin-bottom: 24px; line-height: 1.6; text-align: center;">
-    Это платформа для прямых договорённостей с гарантией выполнения и ИИ-арбитражем.
+    Платформа для прямых договорённостей с гарантией выполнения и ИИ-арбитражем.
   </p>
-
   <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
-    <strong>1. Инициатор создаёт сделку</strong><br/>
-    Указывает @username второго участника, краткое описание и сумму.
+    <strong>1. Создание</strong><br/>
+Созадеете группу с ИИ-ботом и добавляет в группу второго участника. Вы обсуждаете условия и предмет договоренности. ИИ помогает составить договор на основе этих данных.
   </div>
-
   <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
-    <strong>2. Согласование условий</strong><br/>
-    Можно загрузить переписку, оферту, примеры работ. AI помогает составить договор на основе этих данных.
+    <strong>2. Процесс</strong><br/>
+    После согласования условий, вы переносите текст договора в мини-приложение или подгружаете договор. Счет выставляется по ссылке для заказчика, после оплаты деньги временно блокируются. Исполнитель начинает работу.
   </div>
-
   <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
-    <strong>3. Заморозка средств</strong><br/>
-    После согласования условий деньги временно блокируются. Исполнитель начинает работу.
+    <strong>3. Завершение</strong><br/>
+    После выполнения работы стороны подтверждают завершение и происходит оплата, зачисление исполнителю.
   </div>
-
   <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
-    <strong>4. Завершение</strong><br/>
-    После выполнения работы стороны подтверждают завершение и происходит оплата.
+    <strong> Спор</strong><br/>
+    В случае спора - начинается ИИ арбитраж в группе формирования условий и дальнеше решение по выплате денег заказчику или исполнителю.
   </div>
-
   <p style="font-size: 15px; color: #555; margin-top: 32px; text-align: center;">
     «Честно» — для фрилансеров, самозанятых, бизнеса и всех, кто хочет работать честно и безопасно.
   </p>
