--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@
     Платформа для прямых договорённостей с гарантией выполнения и ИИ-арбитражем.
   </p>
   <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
-    <strong>1. Создание</strong><br/>
+    <strong>Создание</strong><br/>
 Созадеете группу с ИИ-ботом и добавляет в группу второго участника. Вы обсуждаете условия и предмет договоренности. ИИ помогает составить договор на основе этих данных.
   </div>
   <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
-    <strong>2. Процесс</strong><br/>
-    После согласования условий, вы переносите текст договора в мини-приложение или подгружаете договор. Счет выставляется по ссылке для заказчика, после оплаты деньги временно блокируются. Исполнитель начинает работу.
+    <strong>Процесс</strong><br/>
+    После согласования условий, вы переносите текст договора в мини-приложение или загружаете договор. Счет выставляется по ссылке для заказчика, после оплаты деньги блокируются. Исполнитель начинает работу.
   </div>
   <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
-    <strong>3. Завершение</strong><br/>
+    <strong>Завершение</strong><br/>
     После выполнения работы стороны подтверждают завершение и происходит оплата, зачисление исполнителю.
   </div>
   <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
