--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
       <button class="button">Мои сделки</button>
       <button class="button" onclick="showHomeScreen()">Назад</button>
     </div>
+       <div id="guide-screen" class="hidden" style="max-width: 600px; width: 100%; padding: 20px;">
   <p style="font-size: 16px; margin-bottom: 24px; line-height: 1.6; text-align: center;">
     Платформа для прямых договорённостей с гарантией выполнения и ИИ-арбитражем.
   </p>
