--- a/index.html
+++ b/index.html
@@ -115,30 +115,30 @@
       <button class="button">Мои сделки</button>
       <button class="button" onclick="showHomeScreen()">Назад</button>
     </div>
-    <div id="guide-screen" class="hidden" style="max-width: 600px; width: 100%; padding: 20px;">
+    <<div id="guide-screen" class="hidden" style="max-width: 600px; width: 100%; padding: 20px;">
+  <h2 style="text-align: center; margin-bottom: 24px;">Как работает «Честно»</h2>
   <p style="font-size: 16px; margin-bottom: 24px; line-height: 1.6; text-align: center;">
     Платформа для прямых договорённостей с гарантией выполнения и ИИ-арбитражем.
   </p>
   <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
     <strong>Создание</strong><br/>
-Созадеете группу с ИИ-ботом и добавляет в группу второго участника. Вы обсуждаете условия и предмет договоренности. ИИ помогает составить договор на основе этих данных.
+    Вы создаёте группу с ИИ-ботом и добавляете второго участника. В чате обсуждаются условия и предмет договорённости. ИИ помогает сформулировать договор.
   </div>
   <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
     <strong>Процесс</strong><br/>
-    После согласования условий, вы переносите текст договора в мини-приложение или загружаете договор. Счет выставляется по ссылке для заказчика, после оплаты деньги блокируются. Исполнитель начинает работу.
+    После согласования условий вы переносите текст договора в мини-приложение или загружаете файл. Для заказчика формируется счёт. После оплаты деньги блокируются. Исполнитель приступает к работе.
   </div>
   <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
     <strong>Завершение</strong><br/>
-    После выполнения работы стороны подтверждают завершение и происходит оплата, зачисление исполнителю.
+    По завершении работы обе стороны подтверждают выполнение. Деньги перечисляются исполнителю.
   </div>
   <div style="border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-bottom: 16px;">
-    <strong> Спор</strong><br/>
-    В случае спора - начинается ИИ арбитраж в группе формирования условий и дальнеше решение по выплате денег заказчику или исполнителю.
+    <strong>Спор</strong><br/>
+    В случае разногласий включается ИИ-арбитраж: анализируются условия сделки, переписка и документы. Решение о выплате принимает платформа.
   </div>
   <p style="font-size: 15px; color: #555; margin-top: 32px; text-align: center;">
     «Честно» — для фрилансеров, самозанятых, бизнеса и всех, кто хочет работать честно и безопасно.
   </p>
-
   <div style="display: flex; justify-content: center; margin-top: 24px;">
     <button class="button" onclick="showHomeScreen()">Назад</button>
   </div>
