--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
     </div>
     <div id="deal-screen" class="hidden">
        <button class="button" onclick="openAIChat()">Создать чат с ИИ</button>
-  <button class="button" onclick="showUploadScreen()">Загрузить условия вручную</button>
+  <button class="button" onclick="showUploadScreen()">Начать сделку</button>
+        <button class="button" onclick="showUploadScreen()">Завершить сделку</button>
+        <button class="button" onclick="showUploadScreen()">Оспорить сделку</button>
       <button class="button" onclick="showHomeScreen()">Назад</button>
     </div>
     <div id="profile-screen" class="hidden">
