--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
        <button class="button" onclick="openAIChat()">Создать чат с ИИ</button>
   <button class="button" onclick="showUploadScreen()">Начать сделку</button>
         <button class="button" onclick="showUploadScreen()">Завершить сделку</button>
-        <button class="button" onclick="showUploadScreen()">Оспорить сделку</button>
+        <button class="button" onclick="showUploadScreen()">Сообщить о споре</button>
       <button class="button" onclick="showHomeScreen()">Назад</button>
     </div>
     <div id="profile-screen" class="hidden">
