--- a/index.html
+++ b/index.html
@@ -224,7 +224,28 @@
         }
 
         const summary = `Сделка создана!\n\nУчастники:\n• Вы: @${user?.username || 'неизвестно'} (ID: ${user?.id})\n• Второй участник: ${username}\n\nУсловия:\n${dealText}\n\nСумма: ${amount} ₽`;
-        alert(summary);
+        const serverUrl = "server-production-4e29.up.railway.app";
+
+fetch(serverUrl, {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify({
+    user_id: user?.id,
+    username: user?.username,
+    second_party: username,
+    deal_text: dealText,
+    amount: amount
+  })
+})
+  .then(res => res.json())
+  .then(data => {
+    alert("✅ Сделка успешно отправлена на сервер!");
+    showHomeScreen();
+  })
+  .catch(err => {
+    alert("❌ Ошибка при отправке сделки");
+    console.error(err);
+  });
         showHomeScreen();
       }
     </script>
